[gd_scene load_steps=5 format=3 uid="uid://b72yl7fvcwsx3"]

[ext_resource type="Script" path="res://modules/top_bar/default/top_bar.gd" id="1_egmw6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_chl26"]
content_margin_left = 7.0
content_margin_right = 7.0
bg_color = Color(0.223529, 0.223529, 0.223529, 1)
shadow_color = Color(0, 0, 0, 0.156863)
shadow_size = 1
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hyse3"]

[sub_resource type="LabelSettings" id="LabelSettings_r4n2x"]
font_size = 14

[node name="TopBar" type="PanelContainer"]
custom_minimum_size = Vector2(0, 20)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_chl26")
script = ExtResource("1_egmw6")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 7

[node name="ProjectButton" type="Button" parent="HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Project"

[node name="SettingsButton" type="Button" parent="HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Settings"

[node name="Spacer" type="VSeparator" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_hyse3")

[node name="MinimizeButton" type="Button" parent="HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Minimize"

[node name="SwitchModeButton" type="Button" parent="HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Switch"

[node name="ExitButton" type="Button" parent="HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Exit"

[node name="ProjectTitleLabel" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 1
text = "Untitled project*"
label_settings = SubResource("LabelSettings_r4n2x")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HBox/ProjectButton" to="." method="_on_project_button_pressed"]
[connection signal="pressed" from="HBox/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="HBox/MinimizeButton" to="." method="_on_minimize_button_pressed"]
[connection signal="pressed" from="HBox/SwitchModeButton" to="." method="_on_switch_mode_button_pressed"]
[connection signal="pressed" from="HBox/ExitButton" to="." method="_on_exit_button_pressed"]
